fix webkit2 scrollbar

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -1777,8 +1777,12 @@ scrollbar.overlay-indicator slider:hover,
 
 scrollbar trough,
 .scrollbar.trough {
-    background-color: transparent;
     margin: 2px;
+}
+
+scrollbar.overlay-indicator trough,
+.scrollbar.overlay-indicator.trough {
+    background-color: transparent;
 }
 
 scrollbar:hover trough,
